--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,7 +51,7 @@
 
 
 
-		<title>{% if page.title %} {{ page.title }} | {% endif %} Brittni's Blog</title>
+		<title>{% if page.title %} {{ page.title }} | {% endif %} Brittni's Portfolio</title>
 		<link rel="stylesheet" href="{{site.baseurl}}/css/reset.css" />
 		<link rel="stylesheet" href="{{site.baseurl}}/css/bootstrap.min.css">
 		<link rel="stylesheet" href="{{site.baseurl}}/css/stickyFooter.css" />
@@ -71,6 +71,8 @@
   		fjs.parentNode.insertBefore(js, fjs);
 		}(document, 'script', 'facebook-jssdk'));</script>
 
+
+		<img src="{{site.baseurl}}/img/logo.png" alt="Brittni Ericson - Imaginative & inspired creative design solutions" style="height: 250px; margin-left:auto;margin-right:auto;display:block" id="siteLogo" nopin="nopin">
 		<header class="navbar navbar-default" role="banner">
   			<div class="container">
   				<div class="container-fluid">
@@ -88,10 +90,9 @@
 						<li><a href="{{site.baseurl}}/" class="menuLink" id="home">Home</a></li>
 						<li><a href="{{site.baseurl}}/about" class="menuLink" id="about">About</a></li>
 						<li><a href="{{site.baseurl}}/skills" class="menuLink" id="skills">Skills</a></li>
-						<li><img src="{{site.baseurl}}/img/logo.png" alt="Brittni Ericson - Imaginative & inspired creative design solutions" style="height: 250px; margin-left:auto;margin-right:auto;display:block" id="siteLogo" nopin="nopin"></li>
 						<li><a href="{{site.baseurl}}/interiorDesign" class="menuLink" id="portfolio">Portfolio</a></li>
 						<li><a href="{{site.baseurl}}/contact" class="menuLink" id="contact">Contact</a></li>
-						<li><a href="{{site.baseurl}}/blog" class="menuLink" id="blog">Blog</a></li>
+						<!--<li><a href="{{site.baseurl}}/blog" class="menuLink" id="blog">Blog</a></li> -->
 					</ul>
     			</div>
   			</div>
