--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,7 +72,7 @@
 		}(document, 'script', 'facebook-jssdk'));</script>
 
 
-		<img src="{{site.baseurl}}/img/logo.png" alt="Brittni Ericson - Imaginative & inspired creative design solutions" style="height: 250px; margin-left:auto;margin-right:auto;display:block" id="siteLogo" nopin="nopin">
+		<img src="{{site.baseurl}}/img/logo.jpg" alt="Brittni Ericson - Imaginative & inspired creative design solutions" style="height: 400px; margin-left:auto;margin-right:auto;display:block" id="siteLogo" nopin="nopin">
 		<header class="navbar navbar-default" role="banner">
   			<div class="container">
   				<div class="container-fluid">
