page format changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,7 +73,7 @@
 
 
 		<img src="{{site.baseurl}}/img/logo.jpg" alt="Brittni Ericson - Imaginative & inspired creative design solutions" style="height: 400px; margin-left:auto;margin-right:auto;display:block" id="siteLogo" nopin="nopin">
-		<header class="navbar navbar-default" role="banner">
+		<<header class="navbar navbar-default" role="banner">
   			<div class="container">
   				<div class="container-fluid">
     				<div class="navbar-header">
@@ -87,16 +87,15 @@
 
    				<div class="collapse navbar-collapse" id="nav-collapse">
       				<ul class="nav nav-justified">
-						<li><a href="{{site.baseurl}}/" class="menuLink" id="home">Home</a></li>
-						<li><a href="{{site.baseurl}}/about" class="menuLink" id="about">About</a></li>
-						<li><a href="{{site.baseurl}}/skills" class="menuLink" id="skills">Skills</a></li>
-						<li><a href="{{site.baseurl}}/interiorDesign" class="menuLink" id="portfolio">Portfolio</a></li>
+						<li><a href="{{site.baseurl}}/" class="menuLink" id="home">Interior Design</a></li>
+						<li><a href="{{site.baseurl}}/drafting/index.html" class="menuLink" id="about">Drafting</a></li>
+						<li><a href="{{site.baseurl}}/graphics/index.html" class="menuLink" id="skills">Graphics</a></li>
+						<li><a href="{{site.baseurl}}/photography/index.html" class="menuLink" id="portfolio">Photography</a></li>
 						<li><a href="{{site.baseurl}}/contact" class="menuLink" id="contact">Contact</a></li>
-						<!--<li><a href="{{site.baseurl}}/blog" class="menuLink" id="blog">Blog</a></li> -->
 					</ul>
     			</div>
   			</div>
-		</header>
+		</header> 
 		<div class="container">
 		{{ content }}
 		</div>
