removed alt texts

--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -10,19 +10,19 @@ navName: portfolio
     <div class="row">
 		<div class="col-md-4" style="padding:20px">
       	<a href="{{site.baseurl}}{{ page.image[forloop.index0] }}" data-lightbox="{{ page.image-alt[forloop.index0] }}">
-      		<img src="{{site.baseurl}}{{ page.image[forloop.index0] }}" alt="{{ page.image-alt[forloop.index0] }}" style="max-width: 100%">
+      		<img src="{{site.baseurl}}{{ page.image[forloop.index0] }}" style="max-width: 100%">
       	</a>
       </div>
   {% elsif loopindex == 2 %}
   		<div class="col-md-4" style="padding:20px">
       	<a href="{{site.baseurl}}{{ page.image[forloop.index0] }}" data-lightbox="{{ page.image-alt[forloop.index0] }}">
-      		<img src="{{site.baseurl}}{{ page.image[forloop.index0] }}" alt="{{ page.image-alt[forloop.index0] }}" style="max-width: 100%">
+      		<img src="{{site.baseurl}}{{ page.image[forloop.index0] }}" style="max-width: 100%">
       	</a>
       </div>
   {% else %}
     <div class="col-md-4" style="padding:20px">
         <a href="{{site.baseurl}}{{ page.image[forloop.index0] }}" data-lightbox="{{ page.image-alt[forloop.index0] }}">
-          <img src="{{site.baseurl}}{{ page.image[forloop.index0] }}" alt="{{ page.image-alt[forloop.index0] }}" style="max-width: 100%">
+          <img src="{{site.baseurl}}{{ page.image[forloop.index0] }}" style="max-width: 100%">
         </a>
       </div>
     </div>
